set fixed height for drinks images

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
       </div>
     </div>
+    <!--/ Navbar /-->
     <div class="flex alert rounded-xl w-/5 mx-5 my-5">
       <div class="flex-shrink-0">
         <svg
@@ -48,11 +49,12 @@
         ><p>Connect your wallet first before use this dApps.</p></label
       >
     </div>
+    <!--/ Notifications /-->
     <div class="grid grid-cols-3 gap-10 mx-10 my-10">
       <div class="card bordered rounded-lg">
         <figure>
           <img
-            class="w-full object-center object-cover max-h-[350px]"
+            class="w-full object-center object-cover h-[350px]"
             src="https://images.unsplash.com/photo-1592483648228-b35146a4330c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1450&q=80"
           />
         </figure>
@@ -73,7 +75,7 @@
       <div class="card bordered rounded-lg">
         <figure>
           <img
-            class="w-full object-center object-cover max-h-[350px]"
+            class="w-full object-center object-cover h-[350px]"
             src="https://images.unsplash.com/photo-1582816421499-4ad9e25ebe4c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JlZW50ZWF8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
           />
         </figure>
@@ -95,7 +97,7 @@
       <div class="card bordered rounded-lg">
         <figure>
           <img
-            class="w-full object-center object-cover max-h-[350px]"
+            class="w-full object-center object-cover h-[350px]"
             src="https://images.unsplash.com/photo-1597676345712-ba4536073513?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=250&q=80"
           />
         </figure>
@@ -117,7 +119,7 @@
       <div class="card bordered rounded-lg">
         <figure>
           <img
-            class="w-full object-center object-cover max-h-[350px]"
+            class="w-full object-center object-cover h-[350px]"
             src="https://images.unsplash.com/photo-1517448931760-9bf4414148c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
           />
         </figure>
@@ -139,7 +141,7 @@
       <div class="card bordered rounded-lg">
         <figure>
           <img
-            class="w-full object-center object-cover max-h-[350px]"
+            class="w-full object-center object-cover h-[350px]"
             src="https://images.unsplash.com/photo-1604085792782-8d92f276d7d8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
           />
         </figure>
@@ -161,7 +163,7 @@
       <div class="card bordered rounded-lg">
         <figure>
           <img
-            class="w-full object-center object-cover max-h-[350px]"
+            class="w-full object-center object-cover h-[350px]"
             src="https://images.unsplash.com/photo-1630424836013-00e25bfe1849?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
           />
         </figure>
