edit card (renove border,change to shadow) + add item sold out total and pricing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dracula">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="hidden xl:block">
+  <body class="hidden lg:block">
     <div class="navbar shadow-lg bg-neutral text-neutral-content rounded-none">
       <div class="flex-1 px-2 ml-10">
         <span class="font-brand text-2xl font-medium">KafeKita</span>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <!--/ Navbar /-->
-    <div class="flex alert rounded-xl w-/5 mx-5 my-5">
+    <div class="flex alert rounded-xl w-/5 mx-5 my-5 shadow-lg drop-shadow-lg">
       <div class="flex-shrink-0">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -51,7 +51,41 @@
     </div>
     <!--/ Notifications /-->
     <div class="grid grid-cols-3 gap-10 mx-10 my-10">
-      <div class="card bordered rounded-lg">
+      <div class="relative card rounded-lg shadow-2xl">
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-lg
+            top-0
+            left-0
+            ml-0
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5><span id="productSoldOut">50</span> sold</h5>
+        </div>
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-full
+            top-0
+            right-0
+            mx-2
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5>$<span id="productPrice">5</span></h5>
+        </div>
         <figure>
           <img
             class="w-full object-center object-cover h-[350px]"
@@ -60,11 +94,7 @@
         </figure>
         <div class="card-body">
           <h3 class="card-title">Strawberry</h3>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero
-            impedit eius earum ipsam rerum alias, aspernatur quia quaerat id?
-            Porro veniam cum ex non ipsa architecto aliquam quis magni tempore.
-          </p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="card-action">
           <button class="btn btn-md btn-outline rounded-sm mx-10 mb-10">
@@ -72,7 +102,41 @@
           </button>
         </div>
       </div>
-      <div class="card bordered rounded-lg">
+      <div class="relative card rounded-lg shadow-2xl">
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-lg
+            top-0
+            left-0
+            ml-0
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5><span id="productSoldOut">50</span> sold</h5>
+        </div>
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-full
+            top-0
+            right-0
+            mx-2
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5>$<span id="productPrice">5</span></h5>
+        </div>
         <figure>
           <img
             class="w-full object-center object-cover h-[350px]"
@@ -94,7 +158,41 @@
           </button>
         </div>
       </div>
-      <div class="card bordered rounded-lg">
+      <div class="relative card rounded-lg shadow-2xl">
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-lg
+            top-0
+            left-0
+            ml-0
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5><span id="productSoldOut">50</span> sold</h5>
+        </div>
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-full
+            top-0
+            right-0
+            mx-2
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5>$<span id="productPrice">5</span></h5>
+        </div>
         <figure>
           <img
             class="w-full object-center object-cover h-[350px]"
@@ -116,7 +214,41 @@
           </button>
         </div>
       </div>
-      <div class="card bordered rounded-lg">
+      <div class="relative card rounded-lg shadow-2xl">
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-lg
+            top-0
+            left-0
+            ml-0
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5><span id="productSoldOut">50</span> sold</h5>
+        </div>
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-full
+            top-0
+            right-0
+            mx-2
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5>$<span id="productPrice">5</span></h5>
+        </div>
         <figure>
           <img
             class="w-full object-center object-cover h-[350px]"
@@ -138,7 +270,41 @@
           </button>
         </div>
       </div>
-      <div class="card bordered rounded-lg">
+      <div class="relative card rounded-lg shadow-2xl">
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-lg
+            top-0
+            left-0
+            ml-0
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5><span id="productSoldOut">50</span> sold</h5>
+        </div>
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-full
+            top-0
+            right-0
+            mx-2
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5>$<span id="productPrice">5</span></h5>
+        </div>
         <figure>
           <img
             class="w-full object-center object-cover h-[350px]"
@@ -160,7 +326,41 @@
           </button>
         </div>
       </div>
-      <div class="card bordered rounded-lg">
+      <div class="relative card rounded-lg shadow-2xl">
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-lg
+            top-0
+            left-0
+            ml-0
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5><span id="productSoldOut">50</span> sold</h5>
+        </div>
+        <div
+          class="
+            absolute
+            bg-gray-200
+            px-3
+            py-3
+            rounded-full
+            top-0
+            right-0
+            mx-2
+            my-2
+            w-15
+            h-15
+          "
+        >
+          <h5>$<span id="productPrice">5</span></h5>
+        </div>
         <figure>
           <img
             class="w-full object-center object-cover h-[350px]"
