--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <!--/ Notifications /-->
     <div class="grid grid-cols-3 gap-10 mx-10 my-10">
-      <div class="relative card rounded-lg shadow-2xl">
+      <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
         <div
           class="
             absolute
@@ -102,7 +102,7 @@
           </button>
         </div>
       </div>
-      <div class="relative card rounded-lg shadow-2xl">
+      <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
         <div
           class="
             absolute
@@ -158,7 +158,7 @@
           </button>
         </div>
       </div>
-      <div class="relative card rounded-lg shadow-2xl">
+      <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
         <div
           class="
             absolute
@@ -214,7 +214,7 @@
           </button>
         </div>
       </div>
-      <div class="relative card rounded-lg shadow-2xl">
+      <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
         <div
           class="
             absolute
@@ -270,7 +270,7 @@
           </button>
         </div>
       </div>
-      <div class="relative card rounded-lg shadow-2xl">
+      <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
         <div
           class="
             absolute
@@ -326,7 +326,7 @@
           </button>
         </div>
       </div>
-      <div class="relative card rounded-lg shadow-2xl">
+      <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
         <div
           class="
             absolute
