--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="light" class="bg-gray-100">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,10 +13,10 @@
       rel="stylesheet"
     />
   </head>
-  <body class="lg:block">
+  <body class="font-brand">
     <div class="navbar shadow-lg bg-neutral text-neutral-content rounded-none">
       <div class="flex-1 px-2 ml-10">
-        <span class="font-brand text-2xl font-medium">KafeKita</span>
+        <span class="text-2xl font-medium">KAFEKITA</span>
       </div>
       <div class="flex-none hidden sm:block">
         <button class="btn btn-md rounded-full">Connect</button>
@@ -386,18 +386,7 @@
       </div>
     </div>
     <div id="browserAlert" class="lg:hidden">
-      <div
-        class="
-          py-20
-          px-20
-          mx-auto
-          my-10
-          max-w-lg
-          text-center
-          bg-gray-300
-          font-brand
-        "
-      >
+      <div class="py-20 px-20 mx-auto my-10 max-w-lg text-center bg-gray-100">
         Please use your desktop, this apps only support desktop hardware...
       </div>
     </div>
