change store text to widest

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="font-brand">
     <div class="navbar shadow-lg bg-neutral text-neutral-content rounded-none">
       <div class="flex-1 px-2 ml-10">
-        <span class="text-2xl font-medium">KAFEKITA</span>
+        <span class="text-2xl font-bold tracking-widest">KAFEKITA</span>
       </div>
       <div class="flex-none hidden sm:block">
         <button class="btn btn-md rounded-full">Connect</button>
