add tx and user balance

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
         <span class="text-2xl font-bold tracking-widest">KAFEKITA</span>
       </div>
       <div class="flex-none hidden sm:block">
+        <button class="btn btn-md rounded-full">
+          <a
+            href="https://alfajores-blockscout.celo-testnet.org/address/0x0000000000000000000000000000000000000000"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            0 tx
+          </a>
+        </button>
+      </div>
+      <div class="flex-none hidden sm:block">
+        <div class="rounded-full text-md">$0 cUSD</div>
+      </div>
+      <div class="flex-none hidden sm:block">
         <button class="btn btn-md rounded-full">Connect</button>
       </div>
       <div class="flex-none mr-10 ml-5 hidden sm:block">
