move from front-end to react component

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-gray-100">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
@@ -13,7 +13,9 @@
     />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="font-brand"></div>
+    <script src="https://cdn.jsdelivr.net/npm/ethereum-blockies@0.1.1/blockies.min.js"></script>
+    <script type="module" src="/src/utils/avatar.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
