--- a/index.html
+++ b/index.html
@@ -68,36 +68,12 @@
       <div class="grid grid-cols-3 gap-10 mx-10 my-10">
         <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-lg
-              top-0
-              left-0
-              ml-0
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
           >
             <h5><span id="productSoldOut">50</span> sold</h5>
           </div>
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-full
-              top-0
-              right-0
-              mx-2
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
           >
             <h5>$<span id="productPrice">5</span></h5>
           </div>
@@ -119,36 +95,12 @@
         </div>
         <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-lg
-              top-0
-              left-0
-              ml-0
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
           >
             <h5><span id="productSoldOut">50</span> sold</h5>
           </div>
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-full
-              top-0
-              right-0
-              mx-2
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
           >
             <h5>$<span id="productPrice">5</span></h5>
           </div>
@@ -175,36 +127,12 @@
         </div>
         <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-lg
-              top-0
-              left-0
-              ml-0
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
           >
             <h5><span id="productSoldOut">50</span> sold</h5>
           </div>
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-full
-              top-0
-              right-0
-              mx-2
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
           >
             <h5>$<span id="productPrice">5</span></h5>
           </div>
@@ -231,36 +159,12 @@
         </div>
         <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-lg
-              top-0
-              left-0
-              ml-0
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
           >
             <h5><span id="productSoldOut">50</span> sold</h5>
           </div>
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-full
-              top-0
-              right-0
-              mx-2
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
           >
             <h5>$<span id="productPrice">5</span></h5>
           </div>
@@ -287,36 +191,12 @@
         </div>
         <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-lg
-              top-0
-              left-0
-              ml-0
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
           >
             <h5><span id="productSoldOut">50</span> sold</h5>
           </div>
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-full
-              top-0
-              right-0
-              mx-2
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
           >
             <h5>$<span id="productPrice">5</span></h5>
           </div>
@@ -343,36 +223,12 @@
         </div>
         <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-lg
-              top-0
-              left-0
-              ml-0
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
           >
             <h5><span id="productSoldOut">50</span> sold</h5>
           </div>
           <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-full
-              top-0
-              right-0
-              mx-2
-              my-2
-              w-15
-              h-15
-            "
+            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
           >
             <h5>$<span id="productPrice">5</span></h5>
           </div>
@@ -392,9 +248,29 @@
             </p>
           </div>
           <div class="card-action">
-            <button class="btn btn-md btn-outline rounded-sm mx-10 mb-10">
+            <a
+              href="#my-modal"
+              class="btn btn-md btn-outline rounded-sm mx-10 mb-10"
+            >
               Buy
-            </button>
+            </a>
+            <div id="my-modal" class="modal">
+              <div class="modal-box">
+                <div class="form-control">
+                  <input
+                    type="number"
+                    placeholder="quantity"
+                    class="input input-lg input-bordered"
+                  />
+                </div>
+                <div class="modal-action">
+                  <a href="/components/modal#" class="btn btn-outline">Buy</a>
+                  <a href="/components/modal#" class="btn btn-outline"
+                    >Cancel</a
+                  >
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
