make eth blockies deps to use nodemodules

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KafeKita</title>
-    <link rel="stylesheet" href="/src/tailwind.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -68,12 +67,36 @@
       <div class="grid grid-cols-3 gap-10 mx-10 my-10">
         <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
           <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
+            class="
+              absolute
+              bg-gray-200
+              px-3
+              py-3
+              rounded-lg
+              top-0
+              left-0
+              ml-0
+              my-2
+              w-15
+              h-15
+            "
           >
             <h5><span id="productSoldOut">50</span> sold</h5>
           </div>
           <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
+            class="
+              absolute
+              bg-gray-200
+              px-3
+              py-3
+              rounded-full
+              top-0
+              right-0
+              mx-2
+              my-2
+              w-15
+              h-15
+            "
           >
             <h5>$<span id="productPrice">5</span></h5>
           </div>
@@ -93,186 +116,6 @@
             </button>
           </div>
         </div>
-        <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
-          >
-            <h5><span id="productSoldOut">50</span> sold</h5>
-          </div>
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
-          >
-            <h5>$<span id="productPrice">5</span></h5>
-          </div>
-          <figure>
-            <img
-              class="w-full object-center object-cover h-[350px]"
-              src="https://images.unsplash.com/photo-1582816421499-4ad9e25ebe4c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8Z3JlZW50ZWF8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-            />
-          </figure>
-          <div class="card-body">
-            <h3 class="card-title">Greentea</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere
-              nesciunt incidunt magni sequi quas! Iure aliquid temporibus
-              similique necessitatibus dignissimos quo nobis sapiente blanditiis
-              repudiandae quisquam. Et dolorum molestias obcaecati.
-            </p>
-          </div>
-          <div class="card-action">
-            <button class="btn btn-md btn-outline rounded-sm mx-10 mb-10">
-              Buy
-            </button>
-          </div>
-        </div>
-        <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
-          >
-            <h5><span id="productSoldOut">50</span> sold</h5>
-          </div>
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
-          >
-            <h5>$<span id="productPrice">5</span></h5>
-          </div>
-          <figure>
-            <img
-              class="w-full object-center object-cover h-[350px]"
-              src="https://images.unsplash.com/photo-1597676345712-ba4536073513?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=250&q=80"
-            />
-          </figure>
-          <div class="card-body">
-            <h3 class="card-title">Mocha</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates id iure placeat recusandae earum soluta voluptate unde
-              quibusdam, voluptas, quam odit reiciendis, magni perspiciatis
-              voluptatum temporibus at? Assumenda, dolor quasi.
-            </p>
-          </div>
-          <div class="card-action">
-            <button class="btn btn-md btn-outline rounded-sm mx-10 mb-10">
-              Buy
-            </button>
-          </div>
-        </div>
-        <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
-          >
-            <h5><span id="productSoldOut">50</span> sold</h5>
-          </div>
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
-          >
-            <h5>$<span id="productPrice">5</span></h5>
-          </div>
-          <figure>
-            <img
-              class="w-full object-center object-cover h-[350px]"
-              src="https://images.unsplash.com/photo-1517448931760-9bf4414148c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-            />
-          </figure>
-          <div class="card-body">
-            <h3 class="card-title">Milky</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates id iure placeat recusandae earum soluta voluptate unde
-              quibusdam, voluptas, quam odit reiciendis, magni perspiciatis
-              voluptatum temporibus at? Assumenda, dolor quasi.
-            </p>
-          </div>
-          <div class="card-action">
-            <button class="btn btn-md btn-outline rounded-sm mx-10 mb-10">
-              Buy
-            </button>
-          </div>
-        </div>
-        <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
-          >
-            <h5><span id="productSoldOut">50</span> sold</h5>
-          </div>
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
-          >
-            <h5>$<span id="productPrice">5</span></h5>
-          </div>
-          <figure>
-            <img
-              class="w-full object-center object-cover h-[350px]"
-              src="https://images.unsplash.com/photo-1604085792782-8d92f276d7d8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80"
-            />
-          </figure>
-          <div class="card-body">
-            <h3 class="card-title">Avocado</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates id iure placeat recusandae earum soluta voluptate unde
-              quibusdam, voluptas, quam odit reiciendis, magni perspiciatis
-              voluptatum temporibus at? Assumenda, dolor quasi.
-            </p>
-          </div>
-          <div class="card-action">
-            <button class="btn btn-md btn-outline rounded-sm mx-10 mb-10">
-              Buy
-            </button>
-          </div>
-        </div>
-        <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-lg top-0 left-0 ml-0 my-2 w-15 h-15"
-          >
-            <h5><span id="productSoldOut">50</span> sold</h5>
-          </div>
-          <div
-            class="absolute bg-gray-200 px-3 py-3 rounded-full top-0 right-0 mx-2 my-2 w-15 h-15"
-          >
-            <h5>$<span id="productPrice">5</span></h5>
-          </div>
-          <figure>
-            <img
-              class="w-full object-center object-cover h-[350px]"
-              src="https://images.unsplash.com/photo-1630424836013-00e25bfe1849?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-            />
-          </figure>
-          <div class="card-body">
-            <h3 class="card-title">Orange</h3>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates id iure placeat recusandae earum soluta voluptate unde
-              quibusdam, voluptas, quam odit reiciendis, magni perspiciatis
-              voluptatum temporibus at? Assumenda, dolor quasi.
-            </p>
-          </div>
-          <div class="card-action">
-            <a
-              href="#my-modal"
-              class="btn btn-md btn-outline rounded-sm mx-10 mb-10"
-            >
-              Buy
-            </a>
-            <div id="my-modal" class="modal">
-              <div class="modal-box">
-                <div class="form-control">
-                  <input
-                    type="number"
-                    placeholder="quantity"
-                    class="input input-lg input-bordered"
-                  />
-                </div>
-                <div class="modal-action">
-                  <a href="/components/modal#" class="btn btn-outline">Buy</a>
-                  <a href="/components/modal#" class="btn btn-outline"
-                    >Cancel</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
     <div id="browserAlert" class="lg:hidden">
@@ -281,7 +124,7 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/ethereum-blockies@0.1.1/blockies.min.js"></script>
-    <script src="src/avatar.js"></script>
+    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/avatar.js"></script>
   </body>
 </html>
