--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </button>
       </div>
       <div class="flex-none hidden sm:block">
-        <div class="rounded-full text-md">$0 cUSD</div>
+        <div class="rounded-full text-md">
+          $<span id="balance">0</span> cUSD
+        </div>
       </div>
       <div class="flex-none hidden sm:block">
         <button class="btn btn-md rounded-full">Connect</button>
@@ -59,87 +61,14 @@
         </svg>
       </div>
       <label class="flex-grow"
-        ><p>Connect your wallet first before use this dApps.</p></label
+        ><span id="notification"
+          >Connect your wallet first before use this dApps.</span
+        ></label
       >
     </div>
     <!--/ Notifications /-->
-    <div id="root" class="hidden lg:block">
-      <div class="grid grid-cols-3 gap-10 mx-10 my-10">
-        <div class="relative card rounded-lg shadow-xl hover:shadow-2xl">
-          <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-none
-              top-0
-              left-0
-              ml-0
-              my-2
-              w-15
-              h-15
-            "
-          >
-            <h5><span id="productSoldOut">50</span> sold</h5>
-          </div>
-          <div
-            class="
-              absolute
-              bg-gray-200
-              px-3
-              py-3
-              rounded-full
-              top-0
-              right-0
-              mx-2
-              my-2
-              w-15
-              h-15
-            "
-          >
-            <h5>$<span id="productPrice">5</span></h5>
-          </div>
-          <figure>
-            <img
-              class="w-full object-center object-cover h-[350px]"
-              src="https://bafybeia6db4cnwrv5ox3uo3wco4gyqi7xivg2dg5gon2gvzatj32maek2a.ipfs.dweb.link/1638418264770-937-c14adf9363dd0d68"
-            />
-          </figure>
-          <div class="card-body">
-            <h3 class="card-title">Strawberry</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime
-              odio ex distinctio sequi blanditiis? Velit voluptatibus culpa
-              nihil, quis libero quas natus incidunt minima repudiandae, autem
-              eaque quae aperiam consequatur?
-            </p>
-          </div>
-          <div class="card-action">
-            <a
-              href="#my-modal"
-              class="btn btn-md btn-outline rounded-sm mx-10 mb-10"
-            >
-              Buy
-            </a>
-            <div id="my-modal" class="modal">
-              <div class="modal-box">
-                <div class="form-control">
-                  <input
-                    type="number"
-                    placeholder="quantity"
-                    class="input input-lg input-bordered"
-                  />
-                </div>
-                <div class="modal-action">
-                  <a href="#" class="btn btn-success">Buy</a>
-                  <a href="#" class="btn btn-outline">Cancel</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="hidden lg:block">
+      <div id="marketplace" class="grid grid-cols-3 gap-10 mx-10 my-10"></div>
     </div>
     <div id="browserAlert" class="lg:hidden">
       <div class="py-20 px-20 mx-auto my-10 max-w-lg text-center bg-gray-100">
