--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            0 tx
+            <span id="user-tx">0</span> tx
           </a>
         </button>
       </div>
