edit svg icon size

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <div class="flex alert rounded-xl w-/5 mx-5 my-5 shadow-lg drop-shadow-lg">
       <div class="flex-shrink-0">
         <svg
+          width="20px"
+          height="20px"
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewBox="0 0 24 24"
