add factory method from dacade

--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
         </svg>
       </div>
       <label class="flex-grow"
-        ><span id="notification"
-          >Connect your wallet first before use this dApps.</span
-        ></label
+        ><span id="notification">What are you looking for?.</span></label
       >
     </div>
     <!--/ Notifications /-->
