--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         </svg>
       </div>
       <label class="flex-grow"
-        ><span id="notification">What are you looking for?.</span></label
+        ><span id="notification">Initialize...</span></label
       >
     </div>
     <!--/ Notifications /-->
@@ -69,7 +69,7 @@
     </div>
     <div id="browserAlert" class="lg:hidden">
       <div class="py-20 px-20 mx-auto my-10 max-w-lg text-center bg-gray-100">
-        Please use your desktop, this apps only support desktop hardware...
+        Please use your desktop, this apps only support on desktop device.
       </div>
     </div>
   </body>
