implement web3 connect, user blockies, adn get cUSD balance

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,14 @@
       <div class="flex-1 px-2 ml-10">
         <span class="text-2xl font-bold tracking-widest">KAFEKITA</span>
       </div>
-      <div class="flex-none hidden sm:block mr-10">
+      <div class="flex-none hidden sm:block">
         <div class="rounded-full text-md">
           $<span id="balance">0</span> cUSD
+        </div>
+      </div>
+      <div class="flex-none mr-10 ml-5 hidden sm:block">
+        <div class="avatar">
+          <div id="avatar-container" class="w-10 h-10 rounded-full"></div>
         </div>
       </div>
     </div>
