implement approve, buyproduct, getTX

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,17 @@
       <div class="flex-1 px-2 ml-10">
         <span class="text-2xl font-bold tracking-widest">KAFEKITA</span>
       </div>
+      <div class="flex-none hidden sm:block" style="margin-right: 1.25rem">
+        <button class="text-md rounded-full">
+          <a
+            href="https://alfajores-blockscout.celo-testnet.org/address/0xa3b48a85DE80D87A014514ac393d3E9f489732CE"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <span id="user-tx">0</span> TX
+          </a>
+        </button>
+      </div>
       <div class="flex-none hidden sm:block">
         <div class="rounded-full text-md">
           $<span id="balance">0</span> cUSD
